--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,240 @@
-.App {
-  text-align: center;
+* {
+  margin:0;
+  padding:0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+  font-family: 'PlayfairDisplay';
+  src: url(./fonts/PlayfairDisplay-Regular.ttf);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
+  height: 400px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
+  font-size: 40px;
+  background-image: url(./img/depositphotos_306130060-stock-photo-herb-and-spices-cooking-background.jpg);
+  background-size: cover;
+  background-position: center center;
+  /* color: dimgray; */
 }
 
-.App-link {
-  color: #61dafb;
+header hr {
+  border: 1px solid dimgrey;
+  width: 60%;
+  margin: 7px 0px 14px 0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+header p {
+  font-size: 18px;
+}
+
+.fa-fish {
+  font-size: 60px;
+}
+
+@media only screen and (max-width: 700px) {
+  header {
+    font-size: 16px;
+    height: 240px;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding-left: 20px;
+    padding-top: 50px;
   }
 }
+
+main {
+  padding: 50px 20px 20px 20px;
+  font-family: 'PlayfairDisplay', serif;
+  letter-spacing: 1px;
+  font-size: 20px;
+}
+
+section {
+  padding-top: 40px;
+}
+
+.search div {
+  position: relative;
+  width: 85%;
+  margin: 0 auto;
+}
+
+.icon-close {
+  position: absolute;
+  right: -5px;
+  top: 20px;
+  cursor: pointer;
+}
+
+.search input {
+  width: 100%;
+  margin-bottom: 40px;
+  padding: 20px;
+  border: 1px solid black;
+  border-radius: 100px 100px;
+}
+
+@media only screen and (min-width: 426px) {
+  section {
+    width: 80%;
+    margin: 0 auto;
+  }
+}
+
+.allRecipes, .favoriteRecipes {
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  column-gap: 15px;
+  row-gap: 15px;
+  margin-top: 20px;
+}
+
+section h1 {
+  padding-left: 5px;
+}
+
+.allRecipes {
+  padding-bottom: 70px;
+}
+
+@media only screen and (max-width: 1220px) {
+  .allRecipes, .favoriteRecipes  {
+    grid-template-columns: 50% 50%;
+  }
+}
+
+@media only screen and (min-width: 740px) {
+  header hr {
+    width: 680px;
+  }
+}
+
+
+@media only screen and (max-width: 600px) {
+  header p {
+    width: 67%;
+    font-size: 14px;
+  }
+
+  header hr {
+    width: 77%;
+  }
+
+  .allRecipes, .favoriteRecipes {
+    grid-template-columns: 100%;
+  }
+
+  .search div {
+    width: 100%;
+  }
+
+  .search input {
+    width: 87%;
+  }
+
+  .icon-close {
+    right: 30px;
+  }
+}
+
+.recipe {
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  border: 1px solid darkkhaki;
+  border-radius: 25px;
+  text-align: right;
+}
+
+.recipe a {
+  color: black;
+  margin-top: 12px;
+  text-transform: uppercase;
+  font-size: 16px;
+}
+
+.favoriteRecipes .recipe {
+  background-color: khaki;
+}
+
+.card-heading {
+  display: flex;
+  flex-grow: 1;
+  align-items: center;
+}
+
+.recipe h3 {
+  margin-bottom: 15px;
+  text-align: left;
+  font-size: 21px;
+}
+
+.recipe p {
+  text-align: right;
+  font-size: 15px;
+}
+
+.allRecipes .icon-remove {
+  display: none;
+}
+
+.favoriteRecipes .icon-add {
+  display: none;
+}
+
+.icon {
+  font-size: 25px;
+  color: red;
+  margin-left: 4px;
+  cursor: pointer;
+}
+
+.image img{
+  width: 100%;
+}
+
+.article {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  width: 50%;
+  margin: 0 auto;
+  padding-bottom: 50px;
+  font-size: 22px;
+}
+
+@media only screen and (max-width: 1000px) {
+  .article {
+    width: 90%;
+  }
+}
+
+.article h1 {
+  font-size: 45px;
+  margin: 40px 0px 30px 0px;
+}
+
+.article p {
+  margin-bottom: 20px;
+}
+
+.article-image {
+  width: 97%;
+  height: 250px;
+  margin-bottom: 30px;
+  background-size: cover;
+  background-position: center 10%;
+}
+
+/* .article img {
+  width: 45px;
+  margin-right: 20px;
+  margin: 30px 0px 30px 0px;
+  float: left;
+  margin-right: 40px;
+  margin-bottom: 10px; 
+} */
