--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ header {
   justify-content: center;
   flex-direction: column;
   font-size: 40px;
-  background-image: url(./img/depositphotos_306130060-stock-photo-herb-and-spices-cooking-background.jpg);
+  background-image: url(./img/herb-and-spices-cooking-background.jpg);
   background-size: cover;
   background-position: center center;
   /* color: dimgray; */
@@ -68,6 +68,7 @@ section {
   right: -5px;
   top: 20px;
   cursor: pointer;
+  z-index: 5;
 }
 
 .search input {
@@ -204,7 +205,7 @@ section h1 {
   width: 50%;
   margin: 0 auto;
   padding-bottom: 50px;
-  font-size: 22px;
+  font-size: 20px;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -228,6 +229,14 @@ section h1 {
   margin-bottom: 30px;
   background-size: cover;
   background-position: center 10%;
+}
+
+.article a {
+  width: max-content;
+  font-size: 18px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: black;
 }
 
 /* .article img {
